--- a/SSO_1/templates/login.html
+++ b/SSO_1/templates/login.html
@@ -12,7 +12,7 @@
     <div id="login_form">
         <form method="post">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="exampleInputEmail1">姓名</label>
             <input type="input" class="form-control" name="usr" id="exampleInputEmail1" placeholder="username">
           </div>
           <div class="form-group">
