--- a/SSO_2/templates/login.html
+++ b/SSO_2/templates/login.html
@@ -2,29 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!-- Bootstrap 核心CSS文件 -->
+    <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <!--font-awesome 核心CSS文件-->
+    <link href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- 在bootstrap.min.js 之前引入 jquery -->
+    <script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
+    <!-- Bootstrap 核心js文件 -->
+    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+    <title>Login</title>
+
+    <!--为了保险起见，导入了本地的jquery和fontawesome    -->
+    <!--jquery-->
+    <script type="text/javascript" src="js/jquery.validate.min.js" ></script>
+    <link rel="stylesheet" href="css/Login.css">
+    <!--font-awesome    -->
+    <link rel="stylesheet" href="font-awesome-4\7\0\css\font-awesome.min.css">
+
+    <style type="text/css">
+        body{
+		background: url("test.jpg") no-repeat center center fixed;
+                /*兼容浏览器版本*/
+                -webkit-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+	}
+
+    </style>
+
+
 </head>
-<body>
+<body background="C:\Users\86199\Desktop\SSO_session-main\SSO_session-main\SSO_1\templates\test.jpg">
+
 <div class="login_content">
-    <div class="page-header" id="page_header">
-      <h1>登录<small>Login</small></h1>
-    </div>
-    <div id="login_form">
-        <form method="post">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="input" class="form-control" name="usr" id="exampleInputEmail1" placeholder="username">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">密码</label>
-            <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="密码">
-          </div>
-          <div id="login_butt">
-              <button type="submit" class="btn btn-default">登录</button>
-              <button type="button" class="btn btn-default" onclick="">注册</button>
-          </div>
+        <div class="form row">
+        <form class="form-horizontal col-sm-offset-3 col-md-offset-3">
+            <h3 class="form-title">登录</h3>
+            <div class="col-sm-9 col-md-9">
+                <div class="form-group">
+                    <!--        用户名图标和用户名输入框            -->
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <input class="form-control" type="text" name="username" id="username" placeholder="请输入用户名" required autofocus>
+                </div>
+                    <!--        密码图标和密码输入框                -->
+                <div class="form-group">
+                    <i class="fa fa-key" aria-hidden="true"></i>
+                    <input class="form-control " type="password" name="password" id="password" placeholder="请输入密码" required>
+                </div>
+                    <!--        用超链接跳转到注册页面               -->
+                <div class="form-group">
+                    <br>
+                    <a href="register.html">没有账号？立即注册</a>
+                </div>
+                    <!--         登录按钮           -->
+                <div class="form-group">
+                    <input type="submit" value="登录" class="btn btn-success pull-right">
+                </div>
+
+            </div>
         </form>
     </div>
+
 </div>
 </body>
 </html>
